--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -16,6 +16,7 @@ dependencies:
   shimmer: 3.0.0
   flutter_inappwebview: ^5.7.2+3
   cached_network_image: ^3.2.3
+  lottie: ^2.3.2
 
 
 
@@ -31,6 +32,7 @@ flutter:
     - assets/images/
     - assets/icons/
     - assets/fonts/
+    - assets/lottie/
  
 
   fonts:
